# NetWeaver

./: .gitignore  LICENSE  README.md
netweaver/: .dockerignore  .gitignore  BUILD_VERIFICATION.md  COMPLETION_NOTES.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FINAL_STATUS.md  LICENSE-APACHE  LICENSE-MIT  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.rs
netweaver/c_core/include/: netweaver_core.h
netweaver/c_core/src/: network_io.c  packet_core.c  packet_parser.c  raw_socket.c
netweaver/config/: netweaver.toml
netweaver/docs/: ARCHITECTURE.md
netweaver/examples/: basic_scan.sh  diagnostics.sh  monitor_network.sh  optimization_workflow.sh  optimize_network.sh  scan_network.sh  security_audit.sh
netweaver/scripts/: install.sh  setup-dev.sh
netweaver/src/: error.rs  lib.rs  main.rs
netweaver/src/analytics/: mod.rs
netweaver/src/cli/: mod.rs
netweaver/src/diagnostics/: mod.rs
netweaver/src/monitor/: mod.rs
netweaver/src/optimizer/: mod.rs
netweaver/src/plugins/: mod.rs
netweaver/src/scanner/: mod.rs
netweaver/src/security/: mod.rs
netweaver/src/utils/: ip.rs  mod.rs  network.rs
netweaver/tests/: integration_tests.rs
