[package]
name = "netweaver"
version = "0.1.0"
edition = "2021"
authors = ["NetWeaver Contributors"]
description = "Hybrid C + Rust network intelligence framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/netweaver/netweaver"
readme = "README.md"
keywords = ["networking", "security", "monitoring", "diagnostics", "performance"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
ratatui = "0.25"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"
parking_lot = "0.12"
dashmap = "5.5"
rayon = "1.8"
libc = "0.2"
socket2 = "0.5"
pnet = "0.34"
pnet_datalink = "0.34"
pnet_packet = "0.34"
hickory-resolver = "0.24"
reqwest = { version = "0.11", features = ["json"] }
flate2 = "1.0"
csv = "1.3"
indicatif = "0.17"
colored = "2.1"
tabled = "0.15"
mac_address = "1.1"
local-ip-address = "0.5"
sysinfo = "0.30"
libloading = "0.8"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[dev-dependencies]
criterion = "0.5"
mockall = "0.12"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "netweaver"
path = "src/main.rs"

[lib]
name = "netweaver_lib"
path = "src/lib.rs"
